--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,9 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
+  
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
@@ -16,6 +18,6 @@
       "es2018",
       "dom"
     ],
-    "allowSyntheticDefaultImports": true
+    
   }
 }
